ADD: Created temporary crosshair in blueprint to help with aiming while testing ADD: Created new BP from Coop Game mode class to allow for selction of new HUD display for temp crosshair

--- a/CoopGame.uproject
+++ b/CoopGame.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.18",
+	"EngineAssociation": "{CBF276BF-4053-1CA4-F0CB-588CA7874DF0}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
